--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.3.5",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
