--- a/frontend-gestion/package.json
+++ b/frontend-gestion/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8002",
     "build": "vite build",
-    "preview": "vite preview",
-    "serve": "vite --port 8002"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.3.4",
